CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

SET(PROGRAM_NAME restapi_gateway)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED TRUE)

SET(SOURCES restapi_gateway.cpp)

PROJECT(${PROGRAM_NAME})

ADD_EXECUTABLE(${PROGRAM_NAME} ${SOURCES})

INCLUDE_DIRECTORIES(../messaging_system/utilities)
INCLUDE_DIRECTORIES(../messaging_system/container)
INCLUDE_DIRECTORIES(../messaging_system/threads)
INCLUDE_DIRECTORIES(../messaging_system/network)

ADD_DEPENDENCIES(${PROGRAM_NAME} network)
TARGET_LINK_LIBRARIES(${PROGRAM_NAME} PUBLIC network)