CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

SET(PROGRAM_NAME upload_sample)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

IF(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG /MDd")
ELSE()
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")
ENDIF()

PROJECT(${PROGRAM_NAME})

ADD_EXECUTABLE(${PROGRAM_NAME} upload_sample.cpp)

INCLUDE_DIRECTORIES(../messaging_system/utilities)

IF(USE_TYPE_CONTAINER)
	INCLUDE_DIRECTORIES(../messaging_system/container)
ENDIF()

INCLUDE_DIRECTORIES(../messaging_system/threads)
INCLUDE_DIRECTORIES(../messaging_system/network)

ADD_DEPENDENCIES(${PROGRAM_NAME} network)
TARGET_LINK_LIBRARIES(${PROGRAM_NAME} PUBLIC network)